[package]
name = "RustPog"
version = "0.1.0"
authors = ["Nicholas Soultanian <nicholas.soultanian@gmail.com>"]
authorTwo = ["Justin Tok <jqtok0829@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.3"